Fixed spacing for Team components. Deleted update buttons for team names.

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ h1 {
 main {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 section {
